dev/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
  namespace: dev
  labels:
    app: nginx-lab
spec:
  type: ClusterIP
  selector:
    app: nginx-lab
  ports:
    - name: http
      port: 80
      targetPort: 80
