dev/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
  namespace: dev
  labels:
    app: nginx-lab
spec:
  type: NodePort
  selector:
    app: nginx-lab
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30081
