dev/hexxaweb-ingress.yaml
# ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hexxa-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hexxa.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hexxa-nginx
            port:
              number: 80
